--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 C++ GUI Qt 4编程 (第二版)
 C++ GUI Programming with Qt 4, Second Edition
 示例代码 迁移到 Qt5
+clone from https://github.com/mutse/qt5-book-code.git
 
